# ChangeLog for net-analyzer/symon
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r2.ebuild:
  Remove slash from docinto, simplify elog messages

  19 Feb 2008; Jakub Moc <jakub@gentoo.org> symon-2.78-r2.ebuild:
  Fix php check in pkg_setup, add missing pkg_prerm for webapp.eclass

  18 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r2.ebuild:
  Introduce a new variable (CDEPEND) that will hold common dependencies for
  (R)DEPEND

  18 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  -symon-2.78-r1.ebuild, +symon-2.78-r2.ebuild:
  New USE flag 'client' added, remove old

  17 Feb 2008; (Tommy[D]) tommy100@gmx.de symon-2.78-r1.ebuild:
  Shorten description

  03 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> files/symon-init.d,
  files/symux-init.d:
  net is really necessary for the correct functioning of the service

  03 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r1.ebuild:
  Simplify elog messages

  02 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r1.ebuild:
  Die if sed failed

  02 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r1.ebuild:
  Append Gentoo CFLAGS in src_compile by using the CFLAGS variable from the
  portage environment instead of doing it with sed in src_unpack

  02 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r1.ebuild:
  Put sed calls after epatch ones to prevent breaking patches, and use "${S}"
  instead of hardcoding the directories

  02 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r1.ebuild:
  Do a safer pattern in sed when the user requested not to build the symux target

  02 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r1.ebuild:
  Instead of using sed and avoiding pre-stripping in src_unpack, make the
  package use the STRIP variable from the portage environment in src_compile
