@@ -1,12 +1,12 @@
-AUX symon-init.d 426 RMD160 c39d35c41266515c0255bd2283903e68bc910c09 SHA1 101f7a49205f3c121620a95a0a616dbe5bd1c718 SHA256 81cd1d230cf63cbdfc31351e019f480288008c7b6ee8690f433f00d5d83db056
+AUX symon-init.d 384 RMD160 779f0410c9ef4ec7ff83a8c4bd80949edd9ee5df SHA1 a60201406a2072a24458fc4ab6ef7af1a35e1c86 SHA256 13b9d627df34708ae4f436a8d10729c809f71d05ecd9f593a47cd6bf161eff28
 AUX symon-symon.conf.patch 610 RMD160 edc2d9ff502ebab575ebb63454b789e306a4ad01 SHA1 49cfe13a2b179781dfb2ccf8f0f037fcc2da0d2f SHA256 8a3c1e03bf5f5456e230556acd16490ca96cb3de1104983012db7d8738bdc560
 AUX symon-symux.conf.patch 1599 RMD160 5131d2679001db3cb440817ec3e000be6f59184e SHA1 fbb36356ea952778d24ec78ad19f0db4b95d808a SHA256 dec14b8c29e183900a74b20eb69f9ad4c20f5988cbcea4175de1728fff18b75d
 AUX symon-syweb-class_lexer.inc.patch 458 RMD160 daa1f26d028901c588602ebc61dddfb867ee3703 SHA1 2f56ff745e3517225ec11ec14ac2fd9f937ef428 SHA256 e1fab2a5b04b9df8a64a006aecb9869290e2e73a9bbd02449d7d9b38d559b163
 AUX symon-syweb-setup.inc.patch 898 RMD160 e8597d4ebd7c77c58c07829665161a21ea7da210 SHA1 07b8a558558288925ae1ec08a496aeef97df824b SHA256 e89d593304eabcd746d26d3bf77fb84a3d5c1fe05026e39e8de56407427624d0
 AUX symon-syweb-total_firewall.layout.patch 1616 RMD160 08462a968ece585cba4331ba596386033776144d SHA1 f942a8cdd8418f487345e0fbf581f744af5ddc0f SHA256 4b1aade4dca5e5e0f6ab12dd7d7265c68fd9a99e42984ae91b330a81cf3cc362
-AUX symux-init.d 392 RMD160 0cdadff01c270dc159695f3155c962407b32faca SHA1 6852f8cf03e8e484590f0f8f410c038ddd42fff3 SHA256 52e5a20ff3c2678b91f395db54952ffb183cc4a0f0d7b9b58ea3c3d2c83cbae4
+AUX symux-init.d 378 RMD160 438f3ee87579117db71fa346cd333cc4740b8a35 SHA1 bc5edf413f24aed698147767447f0266c4374415 SHA256 f887ab858987fc6f0984cba93dddbb1c82fb1ed515340002e373c0aa4541e584
 DIST symon-2.78.tar.gz 102400 RMD160 40ca61ce68778de54d5a1b541d6c640dd7fb479c SHA1 bbe7f2b58e3ed0e42f3b1da97ea4051d2c1cee34 SHA256 cda07388156e66a665c6d53dca4fdce3e210ee6a28c44e64d240715a572b39ac
 DIST syweb-0.57.tar.gz 40960 RMD160 a59c24402344c3d2ae44c4ff586c469289a5e6e8 SHA1 05762c6b472e161d7bae56b603e4eb8595323738 SHA256 d1a5bbec892488f5bbc1ef5b52fd512097421f4e6be8742ad18838d11f42d502
 EBUILD symon-2.78-r2.ebuild 3192 RMD160 c5749b7613fe436a7fc635b1b6236c4c38f53410 SHA1 fc25d0eaf163e2281d9c6d9e19c27b71c32e4fda SHA256 1931b687b2337a914f5df27630218e480478dba0d8324450f54f2a85b0355401
-MISC ChangeLog 3371 RMD160 021a10fc317ffd4be97d7c6d5589cd941d244b95 SHA1 b186e8923043d03ccb78b88d7c459aa90c4181ac SHA256 f891e2f7e36e3f8fbfd7198e3faede353c5de2d8e9e6f353c3df4acdbbae8081
+MISC ChangeLog 3519 RMD160 93ec681c7f32132adfa3ca550ab7ccea4ece225b SHA1 541c09aa117b68db73d68aa67eb694ae702a693d SHA256 c2a28e360b7a52fd345ca123ce69e747c54916debad3d98c85629c8b9af3d8ba
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
